--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,10 @@
         "pestphp/pest-plugin-laravel": "^3.1"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/ApiResponse.php",
+            "app/Dto/Core/MethodResponse.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
