test(GatewayTest, TransactionTypeTest): adicionando test para as rotas de Gateway e TransactionType aumentando a cobertura de teste para 65%

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "autoload": {
         "files": [
             "app/Helpers/ApiResponse.php",
+            "app/Helpers/TestHelpers.php",
             "app/Dto/Core/MethodResponse.php"
         ],
         "psr-4": {
